css/styles.css
/* ... */
.timeline-item:first-child{
  border-top: 0;
  border-top-right-radius: 0;
}

.timeline-item:last-child{
  border-bottom-left-radius: 0;
}

.timeline-number{
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 2rem;
  height: 2rem;
  background: var(--clr-primary-5);
  color: var(--clr-primary-1);
  font-weight: bold;
  display: grid;
  place-items: center;
  border-radius: 50%;
}

.timeline-item:nth-child(odd) .timeline-number{
  left: 100%;
}
.timeline-item:nth-child(even) .timeline-number{
  left: 0%;
}




/*
=============== 
Blog
===============
*/

.blog{
  background: var(--clr-grey-10);
}

.blog-card{
  height: 28.5rem;
  position: relative;
  perspective: 1500px;
}

.card-side{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility:hidden;
  backface-visibility:hidden;
  transition: all 2s linear;
  border-radius: var(--radius);
  /* -webkit-transform: translate3d(0, 0, 0);
  visibility: visible; */
}

.card-front{
  background: var(--clr-light);
}

.card-back{
  background: var(--clr-primary-10);
  display: grid;
  place-items: center;
  transform: rotateY(180deg);
}

.blog-card:hover .card-front{
  transform: rotateY(-180deg);
}
.blog-card:hover .card-back{
  transform: rotateY(0deg);
}

/* rest of the styling */

.card-front img{
  height: 17rem;
  -o-object-fit: cover;
  object-fit: cover;
  border-radius: var(--radius);
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.card-info{
  padding: 1rem 1.5rem;
}

.card-footer{
  display: grid;
  grid-template-columns: auto auto;
  /* align-items: center; */
}
.card-footer img{
  width: 2rem;
  height: 2rem;
  -o-object-fit: cover;
  object-fit: cover;
  border-radius: 50%;
}
.card-footer p{
  color: var(--clr-primary-5);
  text-transform: uppercase;
  justify-self: end;
}

.blog-center{
  display: grid;
  grid-template-columns: repeat(auto-fill , minmax(330px,1fr));
  gap: 3rem 2rem;
}




/*
=============== 
Footer
===============
*/

.footer{
  background: var(--clr-dark);
  padding: 1rem 0;
  display: grid;
  place-items: center;
}

.footer-icon{
  color: var(--clr-primary-7);
  transition: var(--transition);
}

.footer-icon:hover{
  color: var(--clr-light);
  /* transform: scale(1.5); */
}

.footer-info p{
  padding: 0 1rem;
  text-transform: capitalize;
  font-size: 1.2rem;
  color: var(--clr-grey-5);
  letter-spacing: normal;
  /* text-align: center; */
  font-weight: normal;
  margin: 0rem auto 3rem auto
}




/*
=============== 
Single Page
===============
*/

.single-page{
  background: var(--clr-light);
  min-height: calc(100vh - 5rem - 308.69px);
}

.page-header{
  background: var(--clr-primary-10);
  height: 35vh;
  display: grid;
  place-items: center;
}

.page-title{
  margin-bottom: 0;
}

.single-page-center{
  max-width: 40rem;
}
.single-page-center p{
  color: var(--clr-grey-3);
}
.single-page-center a{
  text-transform: lowercase;
  font-weight: bold;
  color: var(--clr-primary-1);
  transition: var(--transition);
}
.single-page-center a:hover{
  color: var(--clr-dark);
}





/*
=============== 
About Page
===============
*/

.about-page-center{
  display: grid;
  gap: 3rem 1rem;
}

.about-page-img{
  justify-self: center;
}

.about-page-image{
  max-height: 32rem;
  max-width: 24rem;
  object-fit: cover;
}

@media screen and (min-width:992px){
  .about-page-center{
    grid-template-columns: 1fr 1fr;
    place-items: center;
    max-width: 1200px;
  }
}

/*
=============== 
Products Page
===============
*/

.projects-page{
  background: rgba(230, 230, 230, 0.9);
}
.single-project{
  background: var(--clr-grey-10);
  border-radius: var(--radius);
}

.project-container{
  position: relative;

}
.project-container img{
  border-top-left-radius: var(--radius);
  border-top-right-radius: var(--radius);
  height: 17rem;
  object-fit: cover;
}

.project-icon{
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translate(-50%,50%);
  font-size: 1.8rem;
  width: 4rem;
  height: 4rem;
  display: grid;
  place-items: center;
  background: var(--clr-primary-5);
  border-radius: 50%;
  color: var(--clr-primary-1);
  border: 6px solid var(--clr-grey-10);
  transition: var(--transition);
}
.project-icon:hover{
  background: var(--clr-dark);
}

.project-details{
  padding: 2.5rem 1.5rem;
}
.project-details h4{
  text-transform: uppercase;
  text-align: center;
  margin-top: 1rem;
}
.project-details p{
  text-align: center;
  /* margin-top: 1.5rem; */
}
.project-footer{
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  margin-bottom: -2.5rem;
}
.project-footer-date{
  color: var(--clr-primary-5);
  text-transform: capitalize;
}
.project-footer span{
  color: var(--clr-primary-5);
  font-size: 1.4rem;
  transition: var(--transition);
  color: var(--clr-primary-5);
}
.project-footer a{
  justify-self: end;
  align-self: baseline;
}
.project-footer span:hover{
  color: var(--clr-dark);
}

.projects-page-center{
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(337px,1fr));
  gap: 5rem 4rem;
}



/*
=============== 
Blog Page
===============
*/


.blog-page-section{
background: var(--clr-light);
min-height: calc(100vh - 5rem - 308.69px);
display: grid;
place-items: center;
padding: 0 3rem;
}

.blog-page-section h4{
  text-transform: none;
  font-size: 2rem;
}

#sad-text{
  font-size: 2.5rem;
}

